<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.a3vam.tiempociudad.activities.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        tools:ignore="UselessParent">
        <Button
            android:id="@+id/btnShowLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/btn_bg"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/btn_get_location"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/cityText"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            tools:ignore="ObsoleteLayoutParam" />



        <TextView
            android:layout_width="match_parent"
            android:text="@string/textoCiudadesCercanas"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText" />


        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner" />


        <ImageView
            android:id="@+id/condIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription=""
            tools:ignore="ContentDescription" />




        <TextView
            android:id="@+id/condDescr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textTemp"
            android:text="@string/labelTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/temp"
            style="@style/tempStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_alignBaseline="@id/condDescr"
            android:layout_toRightOf="@id/condDescr"
            tools:ignore="ObsoleteLayoutParam,RtlHardcoded" />

        <TextView
            android:id="@+id/pressLab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/condDescr"
            android:text="@string/pressure"
            android:layout_marginTop="15dp"
            tools:ignore="ObsoleteLayoutParam" />

        <TextView
            android:id="@+id/press"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/valData"/>

        <TextView
            android:id="@+id/humLab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/pressLab"
            android:text="Humidity"
            tools:ignore="HardcodedText,ObsoleteLayoutParam,RtlHardcoded" />

        <TextView
            android:id="@+id/hum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/humLab"
            android:layout_toRightOf="@id/humLab"
            android:layout_marginLeft="4dp"
            style="@style/valData"
            tools:ignore="ObsoleteLayoutParam,RtlHardcoded" />

        <TextView
            android:id="@+id/windLab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind" />

        <TextView
            android:id="@+id/windSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/windLab"
            android:layout_toRightOf="@id/windLab"
            android:layout_marginLeft="4dp"
            style="@style/valData"
            tools:ignore="ObsoleteLayoutParam,RtlHardcoded" />

        <TextView
            android:id="@+id/windDeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/windLab"
            android:layout_toRightOf="@id/windSpeed"
            android:layout_marginLeft="4dp"
            style="@style/valData"
            tools:ignore="ObsoleteLayoutParam,RtlHardcoded" />

        <Button
            android:id="@+id/btnPronostico"
            android:text="@string/textoPronostico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </LinearLayout>
</RelativeLayout>
